# nbs-gui

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  python-publish.yml
buildah_scripts/: build.sh  build_dev.sh  run_dev.sh
docs/: api.rst  architecture.rst  conf.py  configuration.rst  getting_started.rst  index.md  index.rst  mode_management.rst  requirements.txt  workflows.rst
docs/tabs/: console.rst  index.rst  monitor.rst  queue_control.rst  samples.rst
docs/tabs/queue/: editor.rst  history.rst  loaders.rst  metaplan.rst  queue.rst  staging.rst  viewer.rst  widgets.rst
search/: search_index.json
src/nbs_gui/: QtRedisJSONDict.py  load.py  main.py  mainWidget.py  model.py  models.py  settings.py  viewer.py  window.py
src/nbs_gui/models/: QtReQueueStaging.py  QtRedisJSONDict.py  __init__.py  base.py  beamline.py  misc.py  mixins.py  mode.py  motors.py  redis.py  signal_tuple.py  userStatus.py
src/nbs_gui/plans/: autoPlanWidget.py  base.py  conditionMetaPlan.py  durationMetaPlan.py  flyscanPlan.py  metaPlanBase.py  movePlan.py  nbsPlan.py  planLoaders.py  planParam.py  sampleModifier.py  sampleMovePlan.py  scanModifier.py  scanPlan.py  timeEstimators.py  variableStepPlan.py  xasPlan.py
src/nbs_gui/tabs/: consoleTab.py  debugTab.py  monitorTab.py  motorTab.py  planTab.py  queueControlTab.py  sampleTab.py
src/nbs_gui/utils/: debug_utils.py
src/nbs_gui/views/: energy.py  enums.py  gatevalve.py  manipulator_monitor.py  mixins.py  mode.py  monitors.py  motor.py  motor_tuple.py  signal_tuple.py  status.py  switchable_motors.py  views.py
src/nbs_gui/widgets/: QtRePlanEditor.py  QtRePlanQueue.py  QtRePlanQueueBase.py  QtReQueueStaging.py  QtReRunningPlan.py  enums.py  executionControl.py  header.py  metaPlanSubmission.py  mode_managed.py  motor.py  old_widgets.py  planControl.py  planEditor.py  planSubmission.py  plan_creator.py  qt_custom.py  queueControl.py  sampleSelect.py  serverControl.py  simpleConsoleMonitor.py  status.py  timeEstimators.py  utils.py  views.py  xasPlanEditor.py
