[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]

[project]
name = "nbs-gui"
description = "NBS GUI Module"
authors = [
    { name = "Charles Titus",email = "ctitus@bnl.gov" },
]
dynamic = ["version"]
readme = "README.md"
keywords = ["bluesky", "nsls-ii", "gui"]
requires-python = ">=3.8"
dependencies = ["bluesky_widgets", "bluesky_queueserver_api", "qtpy", "ophyd", "toml", "nbs_core"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]

[project.urls]
homepage = "https://github.com/xraygui/nbs-gui"  # Replace with your project's homepage

[project.scripts]
nbs-gui = "nbs_gui.main:main"
nbs-minimal-gui = "nbs_gui.main:minimal"
nbs-gui-test = "nbs_gui.testScaffolding:main"
nbs-edit-config = "nbs_gui.confEdit:main"

[project.optional-dependencies]

[project.entry-points."nbs_gui.plans"]
nbs-gui-scan = "nbs_gui.plans.scanPlan:ScanPlanWidget"
nbs-gui-move = "nbs_gui.plans.movePlan:MovePlanWidget"
nbs-gui-xas = "nbs_gui.plans.xasPlan:XASPlanWidget"
nbs-gui-timescan = "nbs_gui.plans.scanPlan:TimescanWidget"
nbs-gui-varscan = "nbs_gui.plans.variableStepPlan:VariableStepWidget"
nbs-gui-flyscan = "nbs_gui.plans.flyscanPlan:FlyscanWidget"
nbs-gui-samplemove = "nbs_gui.plans.sampleMovePlan:SampleMovePlan"

[project.entry-points."nbs_gui.plan_loaders"]
nbs-gui-xas = "nbs_gui.plans.planLoaders:XASPlanLoader"

[project.entry-points."nbs_gui.tabs"]
nbs-gui-plans = "nbs_gui.tabs.planTab:PlanTabWidget"
nbs-gui-motors = "nbs_gui.tabs.motorTab:MotorTab"
nbs-gui-queue = "nbs_gui.tabs.queueControlTab:QueueControlTab"
nbs-gui-console = "nbs_gui.tabs.consoleTab:IPythonConsoleTab"
nbs-gui-samples = "nbs_gui.tabs.sampleTab:SampleTab"
nbs-gui-monitor = "nbs_gui.tabs.monitorTab:MonitorTab"

[project.entry-points."nbs_gui.widgets"]
nbs-gui-header = "nbs_gui.widgets.header:Header"

[tool.setuptools_scm]
