[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nbs-gui"
description = "NBS GUI Module"
authors = [
    { name = "Charles Titus",email = "ctitus@bnl.gov" },
]
dynamic = ["version"]
readme = "README.md"
keywords = ["bluesky", "nsls-ii", "gui"]
requires-python = ">=3.8"
dependencies = [
    "bluesky-widgets>=0.0.17, <0.0.18",
    "bluesky-queueserver-api",
    "qtpy",
    "ophyd",
    'tomli ; python_version < "3.11"',
    "tomli_w",
    "nbs-core>=0.1",
    "nbs-bl>=0.2"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]

[tool.hatch.version]
source = "vcs"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pip = "*"
bluesky-base = "*"
bluesky-queueserver = "*"
matplotlib-base= ">=3.9.3,<4"
networkx = ">=3.4.2,<4"
nslsii = ">=0.11.2,<0.12"
numpy = "*"
pyepics = "*"
python = ">=3.12.11,<3.13"
semver = ">=3.0.4,<4"
tiled-client = ">=0.1.0b11,<0.1.1"

# needed until we get p4p packaged
nose2 = ">=0.9.2,<0.10"
ply = ">=3.11,<4"
# needed until we get ophyd-async packaged
colorlog = ">=6.9.0,<7"
epicscorelibs = "*"
pydantic-numpy = "*"
ipython = ">=9.5.0,<10"
databroker = ">=2.0.0b67"
bluesky-tiled-plugins = ">=2.0.0b67"

asteval = ">=1.0.6,<2"
bluesky-widgets = ">=0.0.17,<0.0.18"
bluesky-live = ">=0.0.8,<0.0.9"
qt6-wayland = "*"
pyside6 = "*"

[tool.pixi.pypi-dependencies]
livetable = { git="https://github.com/xraygui/livetable" }
nbs-gui = { path = ".", editable = true }
qtconsole = "*"

[tool.pixi.feature.build.dependencies]
hatch = "*"

[tool.pixi.feature.build.tasks]
build = "hatch build"
test-release = "hatch publish -r test"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=7.1.0"
sphinx-rtd-theme = ">=1.3.0"
myst-parser = ">=2.0.0"
sphinx-autodoc-typehints = ">=1.25.0"
sphinx-design = "*"

[tool.pixi.feature.docs.tasks]
docs-build = "sphinx-build docs docs/_build/html"
docs-serve = "python -m http.server 8001 -d docs/_build/html"
docs-clean = "rm -rf docs/_build"
docs = { depends-on = ["docs-build", "docs-serve"] }

[tool.pixi.environments]
build = { features = ["build"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[project.urls]
homepage = "https://github.com/xraygui/nbs-gui"  # Replace with your project's homepage

[project.scripts]
nbs-gui = "nbs_gui.main:main"
nbs-minimal-gui = "nbs_gui.main:minimal"
nbs-gui-test = "nbs_gui.testScaffolding:main"
nbs-edit-xas = "nbs_gui.widgets.xasPlanEditor:main"

[project.optional-dependencies]

[project.entry-points."nbs_gui.plans"]
nbs-gui-scan = "nbs_gui.plans.scanPlan:ScanPlanWidget"
nbs-gui-move = "nbs_gui.plans.movePlan:MovePlanWidget"
nbs-gui-xas = "nbs_gui.plans.xasPlan:XASPlanWidget"
nbs-gui-timescan = "nbs_gui.plans.scanPlan:TimescanWidget"
nbs-gui-varscan = "nbs_gui.plans.variableStepPlan:VariableStepWidget"
nbs-gui-flyscan = "nbs_gui.plans.flyscanPlan:FlyscanWidget"
nbs-gui-samplemove = "nbs_gui.plans.sampleMovePlan:SampleMovePlan"

[project.entry-points."nbs_gui.plan_loaders"]
nbs-gui-xas = "nbs_gui.plans.planLoaders:XASPlanLoader"

[project.entry-points."nbs_gui.tabs"]
nbs-gui-plans = "nbs_gui.tabs.planTab:PlanTabWidget"
nbs-gui-motors = "nbs_gui.tabs.motorTab:MotorTab"
nbs-gui-queue = "nbs_gui.tabs.queueControlTab:QueueControlTab"
nbs-gui-console = "nbs_gui.tabs.consoleTab:IPythonConsoleTab"
nbs-gui-samples = "nbs_gui.tabs.sampleTab:SampleTab"
nbs-gui-monitor = "nbs_gui.tabs.monitorTab:MonitorTab"

[project.entry-points."nbs_gui.widgets"]
nbs-gui-header = "nbs_gui.widgets.header:Header"
nbs-gui-minimal-header = "nbs_gui.widgets.header:MinimalHeader"
[tool.setuptools_scm]
